--- a/UI/searchPage/DS.html
+++ b/UI/searchPage/DS.html
@@ -13,11 +13,11 @@
     <div class="wrapper">
         <form action="">
             <h1>SEARCH ENGINE</h1>
-            <div class="input-box">
+            <div class="input-box search">
                 <button type="submit" class="btn">
                     <i class='bx bx-search' ></i>
                 </button>
-                <input type="text" placeholder="search" required>
+                <input type="text" class="search-input" placeholder="search" required>
             </div>
             <div class="input-box">
                 <i class='bx bxs-plus-circle' ></i>
